--- a/css3.html
+++ b/css3.html
@@ -56,8 +56,20 @@
 </div><!--col_5 -->
 <div class="col_11 col">
 <div id="featured-box">
-<div class="left featuredProduct"><a href="#kartka"><img alt="" src="media/kamel_28.jpg"/> </a></div>
-<div class="right featuredProduct"><a href="#kartka"><img alt="" src="media/kamel_28.jpg"/> </a></div>
+<div class="left featuredProduct"><a href="#kartka"><img alt="" src="media/kamel_28.jpg"/> </a>
+<div id="buy_box">
+Cena: 3zł
+<br/>
+<span class="left buy"><a href="#"></a></span>
+</div>
+</div>
+<div class="right featuredProduct"><a href="#kartka"><img alt="" src="media/kamel_28.jpg"/> </a>
+<div id="buy_box">
+Cena: 3zł
+<br/>
+<span class="left buy"><a href="#"></a></span>
+</div>
+</div>
 </div>
 
 </div> <!-- content col_10-->
@@ -93,17 +105,21 @@
 </ul>
 </div>
 </div>
+
+</div>
+</div>
 <footer class="row">
-    <section class="col_8 col align_left">
+<div id="footer_top"></div>
+<div id="footer_body">
+<section class="col_8 col align_left">
     All rights reserved
     </section>
     <section class="col_8 col align_right">
-    Have questions? Contact me at angel@enavu.com | Even if it's just to say thanks!
+	
     </section>
+</div>
+    
 </footer>
-</div>
-</div>
-
 
 </body>
 </html>
