--- a/css3.html
+++ b/css3.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="css/css3.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="css/general.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="css/grid.css" media="screen" />
+<link href='http://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
 <!-- @font-face provided by google, works on 97% of browsers -->
 <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
 </head>
@@ -55,6 +56,7 @@
   <!-- end sidebar -->
 </div><!--col_5 -->
 <div class="col_11 col">
+<span class="deco">Produkty Promowane</span>
 <div id="featured-box">
 <div class="left featuredProduct"><a href="#kartka"><img alt="" src="media/kamel_28.jpg"/> </a>
 <div id="buy_box">
