--- a/css3.html
+++ b/css3.html
@@ -18,7 +18,14 @@
 <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
 </head>
 <body  onload="draw();">
-<div class="bar">Kamel</div>
+<div class="bar">
+<div class="row">
+<div class="left col col_8 phone">(058) 555 555 555</div>
+<div class="right align_right col col_8 phone">
+<div id="cartTotal"></div>
+<a href="#">Zaloguj</a></div>
+</div>
+</div>
 <div id="bodywrap">
 <div id="bottom-bg">
 <div class="row">
@@ -113,12 +120,22 @@ Cena: 3zł
 <footer class="row">
 <div id="footer_top"></div>
 <div id="footer_body">
-<section class="col_8 col align_left">
-    All rights reserved
+<section class="col_5 col phone">
+   F.H.U. Kamel <br/>
+   ul. Toruńska 20<br/>
+   Gdańsk
     </section>
-    <section class="col_8 col align_right">
-	
+   <section class="col_5 col phone">
+   F.H.U. Kamel <br/>
+   ul. Toruńska 20<br/>
+   Gdańsk
     </section>
+<section class="col_6 col phone">
+   F.H.U. Kamel <br/>
+   ul. Toruńska 20<br/>
+   Gdańsk
+    </section>
+
 </div>
     
 </footer>
