--- a/css3.html
+++ b/css3.html
@@ -120,21 +120,26 @@ Cena: 3zł
 <footer class="row">
 <div id="footer_top"></div>
 <div id="footer_body">
-<section class="col_5 col phone">
+<section class="col_4 col phone">
    F.H.U. Kamel <br/>
    ul. Toruńska 20<br/>
    Gdańsk
-    </section>
-   <section class="col_5 col phone">
+</section>
+<section class="col_4 col phone">
    F.H.U. Kamel <br/>
    ul. Toruńska 20<br/>
    Gdańsk
-    </section>
-<section class="col_6 col phone">
-   F.H.U. Kamel <br/>
+</section>
+<section class="col_4 col phone">
+ F.H.U. Kamel <br/>
    ul. Toruńska 20<br/>
    Gdańsk
-    </section>
+</section>
+<section class="col_4 col phone">
+ F.H.U. Kamel <br/>
+   ul. Toruńska 20<br/>
+   Gdańsk   
+</section>
 
 </div>
     
