--- a/css3.html
+++ b/css3.html
@@ -120,22 +120,22 @@ Cena: 3zł
 <footer class="row">
 <div id="footer_top"></div>
 <div id="footer_body">
-<section class="col_4 col phone">
+<section class="col_4 col white_text">
    F.H.U. Kamel <br/>
    ul. Toruńska 20<br/>
    Gdańsk
 </section>
-<section class="col_4 col phone">
+<section class="col_4 col white_text">
    F.H.U. Kamel <br/>
    ul. Toruńska 20<br/>
    Gdańsk
 </section>
-<section class="col_4 col phone">
+<section class="col_4 col white_text">
  F.H.U. Kamel <br/>
    ul. Toruńska 20<br/>
    Gdańsk
 </section>
-<section class="col_4 col phone">
+<section class="col_4 col white_text">
  F.H.U. Kamel <br/>
    ul. Toruńska 20<br/>
    Gdańsk   
