--- a/css3.html
+++ b/css3.html
@@ -20,10 +20,10 @@
 <body  onload="draw();">
 <div class="bar">
 <div class="row">
-<div class="left col col_8 phone">(058) 555 555 555</div>
-<div class="right align_right col col_8 phone">
+<div class="left col col_8 phone"><img src="images/phone.png" height="29px" width="29px"/> (058) 555 555 555</div>
+<div class="right align_right col col_8">
 <div id="cartTotal"></div>
-<a href="#">Zaloguj</a></div>
+<a class="white_text" href="#">Zaloguj</a></div>
 </div>
 </div>
 <div id="bodywrap">
